Resolves: tdf#96568 check SelectionFillDOOM() on EnterMatrix()

Change-Id: I6843b4fac175b646a6dd725f5591c49e960a5f18
(cherry picked from commit 6fb5d747893038e0748f30c205e820850ff8e010)
Reviewed-on: https://gerrit.libreoffice.org/28061
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>